fix chrome display vert-align issue

--- a/style-0.css
+++ b/style-0.css
@@ -76,11 +76,10 @@ body {
     width:190px;
 }
 .display{
-    position:relative;
+    position:absolute;
     top: 50%;
     transform: translateY(-50%);
-
-    margin: auto;
+    left:20%;
     width:70%;
     height:70%;
     background-color:#011;
